# rs-modular-dstack

./: Cargo.toml  README.md  newyork.sh  newyork.yml.example  start-vm.sh
contracts/stellar/simple-cluster/: Cargo.toml
contracts/stellar/simple-cluster/src/: lib.rs  test.rs
contracts/stellar/simple-cluster/test_snapshots/test/: test.1.json
crates/: README.md
crates/attestation-driver/: README.md
crates/attestation-driver/cc-eventlog/: Cargo.toml
crates/attestation-driver/tdx-attest/: Cargo.toml
crates/attestation-driver/tdx-attest-sys/: Cargo.toml
crates/attestation-driver/tdx-attest-sys/csrc/: tdx_attest.c
crates/dcap-quotes/: Cargo.toml
crates/diffie-hellman/: Cargo.toml
crates/diffie-hellman/src/: lib.rs
crates/dummy-attestation/: Cargo.toml
crates/dummy-attestation/src/: lib.rs
crates/tdx-attestation/: Cargo.toml
crates/tdx-attestation/src/: lib.rs
dstack-core/: Cargo.toml
dstack-core/src/: crypto.rs  guest.rs  host.rs  lib.rs  types.rs
dstack-core/src/guest/: paths.rs
dstack-core/src/host/: paths.rs
examples/ping-host/: Cargo.toml  Dockerfile
examples/ping-host/src/: main.rs
new-york/: Cargo.toml  Dockerfile  README.md
new-york/src/: lib.rs  quote.rs  stellar.rs  test.rs
new-york/src/stellar/: utils.rs
services/stellar/zephyr/: Cargo.toml  zephyr.toml
services/stellar/zephyr/src/: lib.rs
