[package]
name = "tdx-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
dstack-core = {workspace=true}
async-trait = {workspace=true}
anyhow = {workspace=true}
hex = {workspace=true}
sha2 = {workspace=true}
tdx-attest = {path="../attestation-driver/tdx-attest", optional=true}
tsm-client = {workspace=true, optional=true}
dcap-qvl = "0.1.6"

[features]
default = ["tsm_only"]
tsm_only = ["dep:tsm-client"]
full_c_driver = ["dep:tdx-attest"]
